--- a/scripts/2_texts-processing.ipynb
+++ b/scripts/2_texts-processing.ipynb
@@ -25,13 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "36c94c1b-ac1c-49da-a81a-ae8dbaaf22c4",
    "metadata": {},
    "outputs": [],
    "source": [
     "current_working_directory = os.getcwd()\n",
-    "module_path = os.path.abspath(os.path.join(current_working_directory, '../../latin-preprocessing/'))\n",
+    "relative_path = '../../latin-preprocessing/' # change according to your location...\n",
+    "module_path = os.path.abspath(os.path.join(current_working_directory, relative_path))\n",
     "if module_path not in sys.path:\n",
     "    sys.path.insert(0, module_path)"
    ]
@@ -43,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Now try importing the module\n",
+    "# Now import the module\n",
     "import tomela"
    ]
   },
@@ -114,21 +115,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "id": "62428d81-63ee-4cfc-9bf0-ecdaf208ad02",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "files_ready = os.listdir(target_path)\n",
     "len(files_ready)"
@@ -139,7 +129,144 @@
    "execution_count": null,
    "id": "668a1c05-fdb2-4d33-a942-7afc7a24abbc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "50\n",
+      "100\n",
+      "150\n",
+      "200\n",
+      "250\n",
+      "300\n",
+      "350\n",
+      "400\n",
+      "450\n",
+      "500\n",
+      "550\n",
+      "600\n",
+      "650\n",
+      "700\n",
+      "750\n",
+      "800\n",
+      "850\n",
+      "900\n",
+      "950\n",
+      "1000\n",
+      "1050\n",
+      "1100\n",
+      "1150\n",
+      "1200\n",
+      "1250\n",
+      "1300\n",
+      "1350\n",
+      "1400\n",
+      "1450\n",
+      "1500\n",
+      "1550\n",
+      "1600\n",
+      "1650\n",
+      "1700\n",
+      "1750\n",
+      "1800\n",
+      "1850\n",
+      "1900\n",
+      "1950\n",
+      "2000\n",
+      "2050\n",
+      "2100\n",
+      "2150\n",
+      "2200\n",
+      "2250\n",
+      "2300\n",
+      "2350\n",
+      "2400\n",
+      "2450\n",
+      "2500\n",
+      "2550\n",
+      "2600\n",
+      "2650\n",
+      "2700\n",
+      "2750\n",
+      "2800\n",
+      "2850\n",
+      "2900\n",
+      "2950\n",
+      "3000\n",
+      "3050\n",
+      "3100\n",
+      "3150\n",
+      "3200\n",
+      "3250\n",
+      "3300\n",
+      "3350\n",
+      "3400\n",
+      "3450\n",
+      "3500\n",
+      "3550\n",
+      "3600\n",
+      "3650\n",
+      "3700\n",
+      "3750\n",
+      "3800\n",
+      "3850\n",
+      "3900\n",
+      "3950\n",
+      "4000\n",
+      "4050\n",
+      "4100\n",
+      "4150\n",
+      "4200\n",
+      "4250\n",
+      "4300\n",
+      "4350\n",
+      "4400\n",
+      "4450\n",
+      "4500\n",
+      "4550\n",
+      "4600\n",
+      "4650\n",
+      "4700\n",
+      "4750\n",
+      "4800\n",
+      "4850\n",
+      "4900\n",
+      "4950\n",
+      "5000\n",
+      "5050\n",
+      "5100\n",
+      "5150\n",
+      "5200\n",
+      "5250\n",
+      "5300\n",
+      "5350\n",
+      "5400\n",
+      "5450\n",
+      "5500\n",
+      "5550\n",
+      "5600\n",
+      "5650\n",
+      "5700\n",
+      "5750\n",
+      "5800\n",
+      "5850\n",
+      "5900\n",
+      "5950\n",
+      "6000\n",
+      "6050\n",
+      "6100\n",
+      "6150\n",
+      "6200\n",
+      "6250\n",
+      "6300\n",
+      "6350\n",
+      "6400\n",
+      "6450\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "for n, filename in enumerate(filenames_list):\n",
@@ -152,8 +279,8 @@
     "        #with open(target_path + id + \".pickle\", \"wb\") as f:\n",
     "        #    pickle.dump(doc_sentdata, f)\n",
     "        sent_data_updated = []\n",
-    "        for n, sent_data in enumerate(doc_sentdata):\n",
-    "            sent_data_updated.append((id, n, sent_data[0], sent_data[1]))\n",
+    "        for n_sent, sent_data in enumerate(doc_sentdata):\n",
+    "            sent_data_updated.append((id, n_sent, sent_data[0], sent_data[1]))\n",
     "        with open(target_path + id + \".json\", \"w\") as f:\n",
     "            json.dump(sent_data_updated, f)\n",
     "        if n in range(0, len(filenames_list), 50): # print out the progress each 50 files...\n",
