updated structure of sentence data

--- a/scripts/2_texts-processing.ipynb
+++ b/scripts/2_texts-processing.ipynb
@@ -2,10 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
    "id": "c063b07f-73b4-4e0c-8e3f-e0c649f97d80",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-12T07:45:43.259740875Z",
+     "start_time": "2025-11-12T07:45:41.461871817Z"
+    }
+   },
    "source": [
     "import spacy\n",
     "import sys\n",
@@ -21,7 +24,18 @@
     "import cupy\n",
     "import importlib\n",
     "import json"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jupyter-vojta/notebooks/labyrinth/venv_torch_nlp/lib/python3.12/site-packages/torch/cuda/__init__.py:716: UserWarning: Can't initialize NVML\n",
+      "  warnings.warn(\"Can't initialize NVML\")\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
@@ -286,6 +300,58 @@
     "        if n in range(0, len(filenames_list), 50): # print out the progress each 50 files...\n",
     "            print(n)"
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": 6,
+   "source": [
+    "source_jsons = \"/srv/data/corpus-corporum/cc_sents_jsons/\"\n",
+    "target_jsons = \"/srv/data/corpus-corporum/sents_jsons_dicts/\"\n",
+    "os.makedirs(target_jsons, exist_ok=True)\n",
+    "\n",
+    "for fn in os.listdir(source_jsons):\n",
+    "    doc_id = fn.rpartition(\".\")[0]\n",
+    "    with open(source_jsons + fn, \"r\") as f:\n",
+    "        sents_data = json.load(f)  # list of (sent_text, tokens)\n",
+    "\n",
+    "    sents_data_dicts = []\n",
+    "    for doc_id, sent_n, sent_text, tokens in sents_data:\n",
+    "        tokens_data_dicts = []\n",
+    "        for tok in tokens:\n",
+    "            # tok is (token_text, lemma, pos, (char_start, char_end))\n",
+    "            token_text, lemma, pos, span = tok\n",
+    "            char_start, char_end = int(span[0]), int(span[1])\n",
+    "\n",
+    "            tokens_data_dicts.append({\n",
+    "                \"token_text\": token_text,\n",
+    "                \"lemma\": lemma,\n",
+    "                \"pos\": pos,\n",
+    "                \"ref\": {},                 # always empty dict as requested\n",
+    "                \"char_start\": char_start,\n",
+    "                \"char_end\": char_end,\n",
+    "            })\n",
+    "\n",
+    "        sents_data_dicts.append({\n",
+    "            \"work_id\": doc_id,            # from filename\n",
+    "            \"sent_id\": sent_n,            # enumerated\n",
+    "            \"sent_text\": sent_text,\n",
+    "            \"tokens_data\": tokens_data_dicts,\n",
+    "        })\n",
+    "\n",
+    "    with open(os.path.join(target_jsons,  fn), \"w\", encoding=\"utf-8\") as f:\n",
+    "        json.dump(sents_data_dicts, f, ensure_ascii=False, indent=2)"
+   ],
+   "id": "bce2a93c734be595"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "len(os.listdir(target_jsons))",
+   "id": "51934b4f630a4908"
   },
   {
    "cell_type": "code",
